<resources>
    <string name="app_name">安卓屋</string>
    <string name="app_splash_creator">Created by @YummyLau</string>
    <string name="app_splash_image_prefix">app_ic_splash_image_%s</string>
    <string name="app_splash_text_font">font/REEJI-HonghuangLiGB-Black-2.ttf</string>
    <string name="app_tab_home">首页</string>
    <string name="app_tab_recommendation">逛一逛</string>
    <string name="app_tab_mine">我的</string>
    <string name="app_comp_blog">博文</string>
    <string name="app_comp_project">项目</string>
    <string name="app_comp_paccounts">公众号</string>
    <string name="app_comp_system">体系</string>
    <string name="app_comp_mine">我</string>
    <string name="app_splash_skin">跳过</string>
</resources>
