<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/blog"
        android:checked="true"
        android:icon="@drawable/app_ic_blog"
        android:title="@string/app_comp_blog" />
    <item
        android:id="@+id/project"
        android:icon="@drawable/app_ic_project"
        android:title="@string/app_comp_project" />
    <item
        android:id="@+id/paccounts"
        android:icon="@drawable/app_ic_wechat"
        android:title="@string/app_comp_paccounts" />

    <item
        android:id="@+id/system"
        android:icon="@drawable/app_ic_system"
        android:title="@string/app_comp_system" />

    <item
        android:id="@+id/mine"
        android:icon="@drawable/app_ic_mine"
        android:title="@string/app_comp_mine" />

</menu>